--- a/Li_Andrew_Resume.tex
+++ b/Li_Andrew_Resume.tex
@@ -127,7 +127,7 @@
         %         \resumeItem{Economics of Sustainability and the Environment, Economics of Risk and Uncertainty, Intermediate Micro/Macroeconomics}
         %         \resumeItem{Science and Technology Policy for Interns, Introduction to Cybersecurity}
         %       \resumeItemListEnd
-      \resumeItem{LSAT: 179}
+    %   \resumeItem{LSAT: 179}
       \resumeItemListEnd
 
     % \resumeSubheadingTwo
@@ -142,7 +142,15 @@
 %-----------EXPERIENCE-----------------
 \section{Experience}
   \resumeSubHeadingListStart
-  
+
+    \resumeSubheadingTwo
+      {Software Engineering Intern / Capital One Financial}{June 2022 - August 2022}
+      \resumeItemListStart
+        \resumeItem{Built a comprehensive web app unifying disparate types of cybersecurity information including events, threats, and knowledge bases}
+        \resumeItem{Engaged in daily meetings to showcase progress and discuss design ideas with project managers}
+        \resumeItem{Presented project to the Capital One cyber department}
+      \resumeItemListEnd
+
     \resumeSubheadingTwo
       {Policy Research Intern / Environmental Law Institute}{June 2021 - August 2021}
       \resumeItemListStart
@@ -168,13 +176,13 @@
         \resumeItem{Explored security and privacy vulnerabilities is Voice Personal Assistants to publish in research}
       \resumeItemListEnd
 
-    \resumeSubheadingTwo
-      {Data Science Intern / JHU Applied Physics Laboratory}{June 2020 - August 2020}
-      \resumeItemListStart
-        \resumeItem{Developed MySQL database for unified access to COVID-19 data from multiple sources to aid the JHU APL's COVID-19 modeling effort}
-        \resumeItem{Proposed and led a COVID-19 sentiment analysis project to examine public opinion shifts in specific areas like mask-wearing and shutdowns and how it may affect or be affected by state-level public policy}
-        \resumeItem{Presented results to a team of engineers across the APL network and work was scouted for further implementation with the APL's ESSENCE health surveillance tool}
-      \resumeItemListEnd
+    % \resumeSubheadingTwo
+    %   {Data Science Intern / JHU Applied Physics Laboratory}{June 2020 - August 2020}
+    %   \resumeItemListStart
+    %     \resumeItem{Developed MySQL database for unified access to COVID-19 data from multiple sources to aid the JHU APL's COVID-19 modeling effort}
+    %     \resumeItem{Proposed and led a COVID-19 sentiment analysis project to examine public opinion shifts in specific areas like mask-wearing and shutdowns and how it may affect or be affected by state-level public policy}
+    %     \resumeItem{Presented results to a team of engineers across the APL network and work was scouted for further implementation with the APL's ESSENCE health surveillance tool}
+    %   \resumeItemListEnd
       
     % \resumeSubheadingTwo
     %   {Intern / Lepton Global / Vienna, VA}{May 2019 - August 2019}
