--- a/Li_Andrew_Resume.tex
+++ b/Li_Andrew_Resume.tex
@@ -105,8 +105,8 @@
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
   \textbf{{\Large Andrew Li}} & 
   \href{mailto:li.andrew.hua@gmail.com}{li.andrew.hua@gmail.com} \\ & 
-  703-457-0020 \\ & 
-  \url{https://friendlyai.github.io/}
+  703-457-0020 % \\ & 
+  % \url{https://friendlyai.github.io/}
 \end{tabular*}
 
 
@@ -114,13 +114,17 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheadingTwo
+      {Harvard Law School (2023 - 2026)}{}
+      \resumeItemListStart
+        \resumeItem{J.D. Candidate}
+    \resumeItemListEnd
+    \resumeSubheadingTwo
       {University of Virginia (2019 - 2023)}{3.99 / 4.00}
       \resumeItemListStart
-        \resumeItem{B.S. Computer Science (Expected May 2023)}
-        \resumeItem{B.A. Economics (Expected May 2023)}
+        \resumeItem{B.S. Computer Science, Economics and Public Policy}
           \resumeItemListStart
-            \resumeItem{Concentration in Public Policy}
             \resumeItem{Kenneth G. Elzinga Scholarship recipient}
+             \resumeItem{Duncan Clark Hyde Award recipient}
           \resumeItemListEnd
         % \resumeItem{Relevant coursework:}
         %       \resumeItemListStart
@@ -142,22 +146,29 @@
 %-----------EXPERIENCE-----------------
 \section{Experience}
   \resumeSubHeadingListStart
+  
+    \resumeSubheadingTwo
+      {Research Assistant / University of Virginia}{August 2020 - September 2022}
+      \resumeItemListStart
+        \resumeItem{Designed and developed secure and usable Voice Personal Assistant software in C++ and Python that improves privacy controls on current industry standards like Amazon Alexa}
+        \resumeItem{Explored security and privacy vulnerabilities in Voice Personal Assistants to publish in research}
+        \resumeItem{Contributed to a research paper identifying key weaknesses and opportunities for improvement in Voice Personal Assistant privacy controls}
+      \resumeItemListEnd
 
     \resumeSubheadingTwo
-      {Software Engineering Intern / Capital One Financial}{June 2022 - August 2022}
+      {Software Engineering Intern / Capital One}{June 2022 - August 2022}
       \resumeItemListStart
-        \resumeItem{Built a comprehensive web app unifying disparate types of cybersecurity information including events, threats, and knowledge bases}
+        \resumeItem{Built a comprehensive web app unifying disparate types of confidential cybersecurity information including events, threats, and knowledge bases}
         \resumeItem{Engaged in daily meetings to showcase progress and discuss design ideas with project managers}
-        \resumeItem{Presented project to the Capital One cyber department}
+        \resumeItem{Presented project to 60+ associates in Capital One's cybersecurity department}
       \resumeItemListEnd
 
     \resumeSubheadingTwo
       {Policy Research Intern / Environmental Law Institute}{June 2021 - August 2021}
       \resumeItemListStart
-        \resumeItem{Research was published and featured as the lead article in the Environmental Forum's March-April 2022 issue}
-        \resumeItem{Researched and wrote a comprehensive literature review on the positive and negative effects of the Internet of Things on the environment}
-        \resumeItem{Proposed policy and governance recommendations and presented findings to staff}
-        \resumeItem{Wrote multiple papers to be published in ELI publications and online}
+        \resumeItem{Research was published and featured as the lead article in The Environmental Forum}
+        \resumeItem{Researched and wrote a comprehensive 30 page literature review on the positive and negative environmental effects of the Internet of Things}
+        % \resumeItem{Proposed policy and governance recommendations and presented findings to staff}
         \resumeItem{Constructed a bibliographic analysis of 22k research publications in the field of AI and the environment, reporting findings to a team of researchers at ELI, Yale, and Berkeley}
       \resumeItemListEnd
 
@@ -165,24 +176,17 @@
       {Research Assistant / Woodrow Wilson Center}{June 2021 - August 2021}
       \resumeItemListStart
         \resumeItem{Worked one-on-one with a scholar to support research on China's role in international standard setting}
-        \resumeItem{Composed multiple short essays on China-US relations and technological decoupling}
-        \resumeItem{Read and analyzed papers in both Chinese and English language to create a comparative analysis of international perspectives on decoupling and the COVID-19 pandemic}
+        \resumeItem{Composed multiple essays synthesizing research on China-US relations and technological decoupling}
+        \resumeItem{Read and analyzed papers in both Chinese and English language to create a comparative analysis of international perspectives on decoupling during the COVID-19 pandemic}
       \resumeItemListEnd
 
     \resumeSubheadingTwo
-      {Research Assistant / University of Virginia}{August 2020 - Present}
+      {Data Science Intern / JHU Applied Physics Laboratory}{June 2020 - August 2020}
       \resumeItemListStart
-        \resumeItem{Designed and developed secure and usable Voice Personal Assistant software in C++ and Python that improves privacy controls on current industry standards like Amazon Alexa}
-        \resumeItem{Explored security and privacy vulnerabilities is Voice Personal Assistants to publish in research}
+        \resumeItem{Proposed and led a COVID-19 sentiment analysis project to examine public opinion shifts in specific areas like mask-wearing and shutdowns and how it may affect or be affected by state-level public policy}
+        % \resumeItem{Developed MySQL database for unified access to COVID-19 data from multiple sources to aid the JHU APL's COVID-19 modeling effort}
+        \resumeItem{Presented results to a team of engineers across the APL network and work was scouted for further implementation with the APL's ESSENCE health surveillance tool}
       \resumeItemListEnd
-
-    % \resumeSubheadingTwo
-    %   {Data Science Intern / JHU Applied Physics Laboratory}{June 2020 - August 2020}
-    %   \resumeItemListStart
-    %     \resumeItem{Developed MySQL database for unified access to COVID-19 data from multiple sources to aid the JHU APL's COVID-19 modeling effort}
-    %     \resumeItem{Proposed and led a COVID-19 sentiment analysis project to examine public opinion shifts in specific areas like mask-wearing and shutdowns and how it may affect or be affected by state-level public policy}
-    %     \resumeItem{Presented results to a team of engineers across the APL network and work was scouted for further implementation with the APL's ESSENCE health surveillance tool}
-    %   \resumeItemListEnd
       
     % \resumeSubheadingTwo
     %   {Intern / Lepton Global / Vienna, VA}{May 2019 - August 2019}
@@ -191,59 +195,44 @@
     %     \resumeItem{Built a custom desktop application to create, archive, and synchronize customer quotes and sales across company computers}
     %     \resumeItem{Communicated with business partners and government agencies to secure procurement and service contracts}
     %   \resumeItemListEnd
-
-    % \resumeSubheadingTwo
-    %   {Software Engineering Intern / LendingPad / McLean, VA}{Jan 2019 - May 2019}
-    %   \resumeItemListStart
-    %     \resumeItem{Developed AI to automate the processing and organization of customer reviews}
-    %     \resumeItem{Designed and trained a custom neural network to perform sentiment analysis in Python using Tensorflow}
-    %     \resumeItem{Achieved 90\% accuracy, exceeding human accuracy when analyzing sentiment}
-    %   \resumeItemListEnd
       
   \resumeSubHeadingListEnd
 
 %-----------ACADEMIC EXPERIENCE-----------------
-\section{Extracurriculars}
+\section{Extracurriculars and Volunteering}
   \resumeSubHeadingListStart
     \resumeSubheadingTwo
-      {Competitor / UVA Moot Court}{Sept 2019 - Present}
+      {Competitor / UVA Moot Court}{September 2019 - December 2021}
         \resumeItemListStart
             \resumeItem{Wrote and argued complex Constitutional law cases to panels of judges}
             \resumeItem{Only team from UVA to break into the round of 16 at Liberty University 2019}
         \resumeItemListEnd
         
     \resumeSubheadingTwo
-      {Guest Writer / Virginia Review of Politics}{May 2021 - Present}
+      {Volunteer Coding Mentor / Capital One CODERS}{June 2022 - July 2022}
         \resumeItemListStart
-            \resumeItem{Wrote and submitted guest articles on modern political theory published online}
+            \resumeItem{Mentored middle-school students in web development to build a small-business webpage}
         \resumeItemListEnd
-
-    % \resumeSubheadingTwo
-    %   {Team Captain / Team America Rocketry Challenge}{Sept 2016 - June 2019}
-    %     \resumeItemListStart
-    %         \resumeItem{Led school rocketry team in designing, building, and flying model rockets up to 1000 ft. while carrying electronics}
-    %         \resumeItem{Placed 14th in national rocketry competition finals}
-    %     \resumeItemListEnd
-        
-    %  \resumeSubheadingTwo
-    %   {President / High School Digital Electronics Club}{Sept 2018 - June 2019}
-    %     \resumeItemListStart
-    %         \resumeItem{Developed intelligent light-following robots for Johns Hopkins University Engineering Program}
-    %         \resumeItem{Led a group of 15 students to learn, design, and build printed circuit boards and small robots}
-    %     \resumeItemListEnd
-
-    % \resumeSubheadingTwo
-    %   {Team Captain / American Computer Science League}{Nov 2015 - June 2019}
-    %     \resumeItemListStart
-    %         \resumeItem{Organized and tutored students to compete in CS competition focusing on CS theory and algorithms}
-    %         \resumeItem{Competed in finals (top 20 teams internationally) for two years}
-    %     \resumeItemListEnd
-
+    
+    \resumeSubheadingTwo
+      {Teaching Assistant / Operating Systems}{January 2022 - May 2022}
+        \resumeItemListStart
+            \resumeItem{Assisted and taught students during office hours in both one-on-one and group settings for highest-level required computer science class}
+            \resumeItem{Refined course curriculum during weekly meetings with course professor}
+        \resumeItemListEnd
+    
+    \resumeSubheadingTwo
+      {Teaching Assistant / Science and Technology Policy}{January 2022 - May 2022}
+        \resumeItemListStart
+            \resumeItem{Recruited students to apply to program and participated in application review and interviews}
+            \resumeItem{Designed and taught curriculum for small cohort of students focused on technology policy}
+            \resumeItem{Prepared students for summer internships in Washington D.C.}
+        \resumeItemListEnd
   \resumeSubHeadingListEnd
 
 %-----------PROJECTS-----------------
-\section{Projects}
-  \resumeSubHeadingListStart
+% \section{Projects}
+%   \resumeSubHeadingListStart
     % \resumeSubheadingTwo{ctaff + rizumu}{}
     %     \resumeItemListStart
     %         \resumeItem{ctaff: Developed algorithms to detect rhythm and beats in music using Fourier transforms and audio signal processing}
@@ -254,13 +243,13 @@
     %         \resumeItem{Built a public internet radio station and lightweight DJ software using the Shout protocol}
     %         \resumeItem{Features cross-platform usability and powerful controls for DJs, including a 24/7 offline bot streamer}
     %     \resumeItemListEnd
-    \resumeSubheadingTwo{Toxical}{}
-        \resumeItemListStart
-            \resumeItem{Trained a neural network to intelligently moderate online conversations on platforms like Twitter and Discord}
-            \resumeItem{Developed a custom sentiment analysis algorithm that detects toxic comments with 80\% accuracy}
-            \resumeItem{Algorithm was used at JHU APL for COVID-19 sentiment analysis on Twitter}
-        \resumeItemListEnd
-  \resumeSubHeadingListEnd
+  %   \resumeSubheadingTwo{Toxical}{}
+  %       \resumeItemListStart
+  %           \resumeItem{Designed and trained a neural network to intelligently moderate online conversations on social platforms like Twitter and Discord}
+  %           \resumeItem{Developed a custom sentiment analysis algorithm that detects toxic comments with 80\% accuracy}
+  %           \resumeItem{AI algorithm was used at the JHU Applied Physics Laboratory for COVID-19 sentiment analysis on Twitter}
+  %       \resumeItemListEnd
+  % \resumeSubHeadingListEnd
 
 %--------AWARDS------------
 % \section{Awards}
@@ -285,11 +274,12 @@
 %   \resumeSubHeadingListEnd
 
 %--------SKILLS------------
-\section{Skills}
- \resumeSubHeadingListStart
-    \resumeSubItem{Research and Analysis:}{Wrote research papers on complex topics including IoT, AI, and China-US relations that were used and published by the Environmental Law Institute and the Wilson Center}
-    \resumeSubItem{Project Management:}{Led project design by a team of interns modeling the COVID-19 pandemic in June 2020}
- \resumeSubHeadingListEnd
+% \section{Skills}
+%  \resumeSubHeadingListStart
+%     \resumeSubItem{Research and Analysis:}{Wrote research papers on complex topics including IoT, AI, and China-US relations that were used and published by the Environmental Law Institute and the Wilson Center}
+%     \resumeSubItem{Project Management:}{Led project design by a team of interns modeling the COVID-19 pandemic in June 2020}
+%     \resumeSubItem{Programming:}{Proficient in Python, C/C++, Java, JavaScript, HTML/CSS, Git}
+%  \resumeSubHeadingListEnd
 %--------------------------
 
 %--------SKILLS------------
