--- a/Li_Andrew_Resume.tex
+++ b/Li_Andrew_Resume.tex
@@ -23,6 +23,7 @@
 \fancyfoot{}
 \renewcommand{\headrulewidth}{0pt}
 \renewcommand{\footrulewidth}{0pt}
+\setlength{\footskip}{4.08003pt}
 
 % Adjust margins
 \addtolength{\oddsidemargin}{-0.375in}
@@ -109,7 +110,7 @@
   % \url{https://friendlyai.github.io/}
 
     \textbf{{\Large Andrew Li}} \\
-    29 Garden St, Apt \#503, MA 02138 • \href{mailto:ali@jd26.law.harvard.edu}{ali@jd26.law.harvard.edu} • 703-457-0020
+    29 Garden St, Apt \#503, Cambridge, MA 02138 • \href{mailto:ali@jd26.law.harvard.edu}{ali@jd26.law.harvard.edu} • 703-457-0020
 \end{tabular*}
 
 
